[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Tiros/laser_mk1/laser_mk1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objetos/Tiros/Laser_Shot.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sons/Bullet_Collision.wav" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 6, 22, 6, 22 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 12, 22, 6, 22 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 44, 6, 22 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 6, 44, 6, 22 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 12, 44, 6, 22 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 6, 22 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 6, 0, 6, 22 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 12, 0, 6, 22 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 22, 6, 22 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "kill",
"speed": 15.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "ignition",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.16259
height = 24.8901

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
animation = "ignition"
frame = 3
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.184025 )
shape = SubResource( 11 )
disabled = true

[node name="RangeTimer" type="Timer" parent="."]

[node name="Sound_Collision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_RangeTimer_timeout"]
[connection signal="finished" from="Sound_Collision" to="." method="_on_Sound_Collision_finished"]
